добавил перемещение элементов, нет пока цвета для кружков

--- a/src/components/string/string.module.css
+++ b/src/components/string/string.module.css
@@ -4,3 +4,11 @@
 	gap: 12px;
 	max-width: 525px;
 }
+
+.circles {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: 120px;
+	gap: 16px;
+}
