--- a/src/components/fibonacci-page/fibo.module.css
+++ b/src/components/fibonacci-page/fibo.module.css
@@ -9,7 +9,7 @@
 	margin: 70px auto 0;
 	padding: 0 120px;
 	display: flex;
-	justify-content: start;
+	justify-content: center;
 	align-items: center;
 	gap: 48px 16px;
 	flex-wrap: wrap;
