--- a/src/components/stack-page/stack.module.css
+++ b/src/components/stack-page/stack.module.css
@@ -14,3 +14,11 @@
 .input {
 	width: 377px;
 }
+
+.stack {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 16px;
+	margin-top: 80px;
+}
